Added projects samples

--- a/src/app/components/body/home/home.component.html
+++ b/src/app/components/body/home/home.component.html
@@ -1,4 +1,11 @@
 <div class="body">
-    <h1>Maher Saleh</h1>
-    <h3>Full-Stack Developer</h3>
+    <div class="container">
+        <div id="typedTitle" #typedTitle></div>
+        <div id="typedParagraph_1" #typedParagraph_1></div>
+        <div id="typedParagraph_2" #typedParagraph_2></div>
+        <div id="technologies_and_frameworks" #technologies_and_frameworks>
+            <div id="technologies_label" #technologies_label></div>
+            <div id="technologies_value" #technologies_value></div>
+        </div>
+    </div>
 </div>
