--- a/src/app/components/body/topics/topics.component.scss
+++ b/src/app/components/body/topics/topics.component.scss
@@ -2,107 +2,150 @@
   position: relative;
 }
 
+.hideCard {
+    opacity: .3;
+}
+
 div.body {
-    width: calc(100% - 200px);
-    height: auto;
-    left: 220px;
+    width: calc(100% - 240px);
+    height: max-content;
+    left: 200px;
+    position: relative;
+    display: flex;
+    padding: 20px;
+    transition: all .3s ease-in-out;
+    margin-bottom: 20px;
+}
+
+div.container {
+    width: 100%;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
-    transform: translateX(0);
-    padding-top: 20px;
+    justify-content: center;
+    transition: all .3s ease-in-out;
 
     div.card {
         width: 280px;
-        height: 160px;
+        height: auto;
+        min-height: 140px;
         padding: 20px;
-        background-color: #fcfbfb;
+        background-color: #f1f1f1;
         border: 1px solid #ddd;
         border-radius: 8px;
         text-align: center;
         box-shadow: 0px 0px 3px #f0f0f0;
-        transition: .5s cubic-bezier(0.215, 0.61, 0.355, 1);
+        transition: all .3s cubic-bezier(0.215, 0.61, 0.355, 1);
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 20px;
         cursor: pointer;
 
         &:not(.active):hover {
+            opacity: 1;
             background-color: #fff;
             box-shadow: 0px 3px 10px #a8a8a8;
         }
 
         &.active {
-            height: 320px;
             width: calc(100vw - 280px);
-            // box-shadow: 3px 5px 8px cyan, -3px -5px 8px cyan;
+            animation: showCardDetails .5s 1 both;
         }
 
         p {
             padding: 0;
             margin: 0;
+            color: #4f4f4f;
+            font-size: calc(1em + 0.5vw);
+        }
+        
+        p.topic_item {
             font-weight: bold;
-            color: grey;
         }
 
-        img {
+        img.logo {
+            // width: auto;
+            // max-height: 120px;
+            // height: 120px;
+            // object-fit: cover;
+            // object-position: center;
             width: auto;
-            max-height: 120px;
-            height: 120px;
-            object-fit: cover;
+            max-height: calc(50px + 3vw);
+            height: unset;
+            object-fit: contain;
             object-position: center;
         }
+
+        iframe {
+            box-sizing: border-box;
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: calc(100vw * 0.5);
+            max-height: unset !important;
+            zoom: 100%;
+            border: 1px solid #dddddd;
+            border-radius: 8px;
+            margin-top: 20px;
+        }
+        
+        img.image {
+            box-sizing: border-box;
+            position: relative;
+            top: 0;
+            left: 0;
+            width: max-content;
+            max-width: 100%;
+            height: calc(100vw * 0.5);
+            max-height: max-content !important;
+            zoom: 75%;
+            border: 1px solid #dddddd;
+            border-radius: 8px;
+            margin-top: 20px;
+            object-fit: contain;
+        }
+    }
+}
+
+@keyframes showCardDetails {
+    0% {
+        opacity: 0;
+        max-height: 182px;
+    }
+    100% {
+        opacity: 1;
+        max-height: auto;
+    }
+}
+
+@media (max-width: 920px) {
+    div.container {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
 @media (max-width: 650px) {
     div.body {
-        left: 70px;
-        width: calc(100% - 90px);
+        left: 50px;
+        width: calc(100% - 70px);
     }
 }
 
 @media (max-width: 480px) {
     div.body {
-        flex-direction: column;
+        padding: 10px;
     }
 
     div.card {
-        width: calc(100vw - 130px) !important;
+        // width: calc(100vw - 140px) !important;
+        width: 100% !important;
+        box-sizing: border-box;
     }
 }
-
-@media (min-width: 481px) and (max-width: 650px) {
-    div.card {
-        width: calc(50vw - 97px) !important;
-        min-width: unset;
-    }
-}
-
-
-
-        // .snippet_container {
-        //     white-space: pre-wrap;
-        //     overflow: hidden;
-        //     border-right: 4px solid black; /* Cursor effect */
-        //     // width: 0; /* Start hidden, expand with animation */
-        //     width: 100%; /* Start hidden, expand with animation */
-        //     // animation: typing 5s steps(40, end), blink-caret 0.5s step-end infinite;
-        //     max-width: 50ch;
-        // }
-
-        // /* Typing animation */
-        // @keyframes typing {
-        //   from {
-        //     width: 0;
-        //   }
-        //   to {
-        //     width: 100%;
-        //   }
-        // }
-
-        // /* Blinking caret animation */
-        // @keyframes blink-caret {
-        //   50% {
-        //     border-color: transparent;
-        //   }
-        // }
