--- a/src/app/components/body/topics/topics.component.scss
+++ b/src/app/components/body/topics/topics.component.scss
@@ -25,7 +25,6 @@ div.container {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: center;
     transition: all .3s ease-in-out;
 
     div.card {
@@ -38,13 +37,15 @@ div.container {
         border-radius: 8px;
         text-align: center;
         box-shadow: 0px 0px 3px #f0f0f0;
-        transition: all .3s cubic-bezier(0.215, 0.61, 0.355, 1);
+        transition: all .8s cubic-bezier(0.215, 0.61, 0.355, 1);
         justify-content: center;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         gap: 20px;
         cursor: pointer;
+        align-items: center;
+        justify-content: space-between;
 
         &:not(.active):hover {
             opacity: 1;
@@ -54,7 +55,7 @@ div.container {
 
         &.active {
             width: calc(100vw - 280px);
-            animation: showCardDetails .5s 1 both;
+            // animation: showCardDetails .5s 1 both;
         }
 
         p {
@@ -76,6 +77,7 @@ div.container {
             // object-position: center;
             width: auto;
             max-height: calc(50px + 3vw);
+            max-width: 170px;
             height: unset;
             object-fit: contain;
             object-position: center;
@@ -125,6 +127,10 @@ div.container {
 }
 
 @media (max-width: 920px) {
+    div.body{
+        padding: 20px;
+    }
+    
     div.container {
         flex-direction: column;
         align-items: center;
@@ -136,6 +142,11 @@ div.container {
         left: 50px;
         width: calc(100% - 70px);
     }
+    
+    div.card {
+        box-sizing: border-box;
+        width: calc(100% - 50px) !important;
+    }
 }
 
 @media (max-width: 480px) {
@@ -144,8 +155,11 @@ div.container {
     }
 
     div.card {
-        // width: calc(100vw - 140px) !important;
-        width: 100% !important;
         box-sizing: border-box;
+        width: 100% !important;
+    }
+
+    div.card iframe {
+        zoom: .75 !important;
     }
 }
