--- a/src/app/components/body/topics/topics.component.scss
+++ b/src/app/components/body/topics/topics.component.scss
@@ -13,7 +13,7 @@ div.body {
     position: relative;
     display: flex;
     padding: 20px;
-    transition: all .3s ease-in-out;
+    // transition: all .3s ease-in-out;
     margin-bottom: 20px;
 }
 
@@ -70,12 +70,8 @@ div.container {
         }
 
         img.logo {
-            // width: auto;
-            // max-height: 120px;
-            // height: 120px;
-            // object-fit: cover;
-            // object-position: center;
             width: auto;
+            min-width: 60px;
             max-height: calc(50px + 3vw);
             max-width: 170px;
             height: unset;
