--- a/src/app/components/body/home/home.component.scss
+++ b/src/app/components/body/home/home.component.scss
@@ -122,6 +122,7 @@ div.container {
         flex-direction: column;
         align-items: start;
         padding: 5px 5px 0 5px;
+        border-radius: 4px;
     }
 
     div.body div#technologies_and_frameworks div#technologies_value {
