Renamed Mobile to Cross Platforms and added React Native and Electron

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -18,8 +18,8 @@
                     @if (topic.name != 'Empty') {
                         <div class="icon-container"
                             [ngStyle]="{
-                                '-webkit-mask': 'url(' + topic.icon + ') no-repeat center / contain',
-                                'mask': 'url(' + topic.icon + ') no-repeat center / contain',
+                                '-webkit-mask': 'url(' + encodeURI(topic.icon) + ') no-repeat center / contain',
+                                'mask': 'url(' + encodeURI(topic.icon) + ') no-repeat center / contain',
                                 }">
                         </div>
                         <a data-content="topic.name">{{ topic.name }}</a>
