--- a/src/app/components/body/topics/topics.component.scss
+++ b/src/app/components/body/topics/topics.component.scss
@@ -77,6 +77,7 @@ div.container {
             height: unset;
             object-fit: contain;
             object-position: center;
+            margin: auto;
         }
 
         iframe {
