--- a/src/app/components/webview/webview.html
+++ b/src/app/components/webview/webview.html
@@ -1,1 +1,1 @@
-<iframe title='iframe' [attr.src]="sanitizedUrl" width="100%" height="600px" frameborder="0"></iframe>
+<iframe title='iframe' [src]="sanitizedUrl" width="100%" height="600px" frameborder="0"></iframe>
