--- a/src/app/components/body/topics/topics.component.html
+++ b/src/app/components/body/topics/topics.component.html
@@ -9,10 +9,10 @@
                         <p class="snippet_container" [innerHTML]="component.snippet"></p>
                     }
                     @if ( component.url ){
-                        <iframe title="topic.item" [attr.src]="safeUrl" frameborder="0"></iframe>
+                        <iframe title="topic.item" [src]="safeUrl" frameborder="0"></iframe>
                     }
                     @if ( component.images.length ){
-                        <img class="image" title="topic.item" [attr.src]="component.images[0]" />
+                        <img class="image" title="topic.item" [src]="component.images[0]" />
                     }
                 }
             </div>
