--- a/src/app/components/body/topics/topics.component.scss
+++ b/src/app/components/body/topics/topics.component.scss
@@ -69,6 +69,10 @@ div.container {
             font-weight: bold;
         }
 
+        p.snippet_container a {
+            
+        }
+
         img.logo {
             width: auto;
             min-width: 60px;
