--- a/src/app/components/body/topics/topics.component.html
+++ b/src/app/components/body/topics/topics.component.html
@@ -6,13 +6,12 @@
                 <p class="topic_item">{{ component.item }}</p>
                 @if ( component.item === selected_card && is_active){
                     @if ( component.snippet ){
-                        <p class="snippet_container" [innerHTML]="component.snippet"></p>
-                    }
-                    @if ( component.url ){
-                        <iframe loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item" [src]="getSanitizedUrl(component.url)" frameborder="0"></iframe>
+                        <p class="snippet_container" [innerHTML]="component.snippet + (component.url ? '<a href=' + component.url + ' target=\'_blank\'>' + component.url + '</a>' : '')"></p>
                     }
                     @if ( component.images.length ){
                         <img class="image" title="topic.item" [src]="component.images[0]" />
+                    } @else if ( component.url ){
+                        <iframe loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item" [src]="getSanitizedUrl(component.url)" frameborder="0"></iframe>
                     }
                 }
             </div>
