--- a/src/app/components/body/topics/topics.component.html
+++ b/src/app/components/body/topics/topics.component.html
@@ -9,8 +9,15 @@
                         <p class="snippet_container" [innerHTML]="component.snippet"></p>
                         <!-- <p class="snippet_container" [innerHTML]="component.snippet + (component.url ? '<a href=' + component.url + ' target=\'_blank\'>' + component.url + '</a>' : '')"></p> -->
                     }
-                    @if ( component.url ){
-                        <iframe loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item" [src]="getSanitizedUrl(component.url)" frameborder="0"></iframe>
+                    @if ( component.url.length ){
+                        @if ( component.url.length > 1 ) {
+                            <label class="iframe-label">Producer Website/Service</label>
+                            <iframe class="iframeI" loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item" [src]="getSanitizedUrl(component.url[0])" frameborder="0"></iframe>
+                            <label class="iframe-label">Consumer Website/Service</label>
+                            <iframe class="iframeII" loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item" [src]="getSanitizedUrl(component.url[1])" frameborder="0"></iframe>
+                        } @else {
+                            <iframe class="iframeI" loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item" [src]="getSanitizedUrl(component.url[0])" frameborder="0"></iframe>
+                        }
                     } @else if ( component.images.length ){
                         <img class="image" title="topic.item" [src]="component.images[0]" />
                     }
