--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -8,7 +8,7 @@ footer {
     display: flex;
     align-items: center;
     padding-left: 10px;
-    font-weight: bold;
+    // font-weight: bold;
     font-family: 'ArialBlk';
     z-index: 1;
 }
