--- a/src/app/components/body/about/about.component.html
+++ b/src/app/components/body/about/about.component.html
@@ -1,33 +1,41 @@
 <div class="body">
     <div class="container">
-        
+
         <div id="emails">
-            <span class="label">E-mail Addresses:</span>
-            <div>
+            <span class="label email">E-mail Addresses:</span>
+            <p>
                 <a href="mailto:ehabelnahas@outlook.com">ehabelnahas&#64;outlook.com</a>
                 <a href="mailto:ehabelnahas@hotmail.com">ehabelnahas&#64;hotmail.com</a>
                 <a href="mailto:ehabelnahas@gmail.com">ehabelnahas&#64;gmail.com</a>
-            </div>
+            </p>
         </div>
-        
+
         <div id="linkedin">
-            <span class="label">LinkedIn:</span>
-            <a href="https://www.linkedin.com/in/maher-el-nahas/">https://www.linkedin.com/in/maher-el-nahas/</a>
+            <p>
+                <span class="label">LinkedIn:</span>
+                <a href="https://www.linkedin.com/in/maher-el-nahas/">https://www.linkedin.com/in/maher-el-nahas/</a>
+            </p>
         </div>
-        
+
         <div id="github">
-            <span class="label">GitHub:</span>
-            <a href="https://github.com/maher-saleh">https://github.com/maher-saleh</a>
+            <p>
+                <span class="label">GitHub:</span>
+                <a href="https://github.com/maher-saleh">https://github.com/maher-saleh</a>
+            </p>
         </div>
-        
+
         <div id="phone">
-            <span class="label">Phone Number:</span>
-            <a href="tel:+201006931346">+20-1006931346</a>
+            <p>
+                <span class="label">Phone Number:</span>
+                <a href="tel:+201006931346">+201006931346</a>
+            </p>
         </div>
-        
+
         <div id="residence">
-            <span class="label">Residence Country:</span>
-            <a href="https://www.google.com/maps/place/Egypt">Egypt</a>
+            <p>
+                <span class="label">Residence Country:</span>
+                <a href="https://www.google.com/maps/place/Egypt">Egypt</a>
+            </p>
         </div>
     </div>
 </div>
