--- a/src/app/components/body/topics/topics.component.scss
+++ b/src/app/components/body/topics/topics.component.scss
@@ -26,6 +26,8 @@ div.container {
     flex-wrap: wrap;
     gap: 20px;
     transition: all .3s ease-in-out;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(322px, 1fr));
 
     div.card {
         width: 280px;
