--- a/src/app/components/body/topics/topics.component.html
+++ b/src/app/components/body/topics/topics.component.html
@@ -2,7 +2,9 @@
     <div class="container">
         @for (component of selected_topic_components; track $index) {
         <div class="card" [class]="{'hideCard':is_active && component.item != selected_card}"
-            (click)="on_click($event, component)" (mouseleave)="resetPosition($event)">
+            (click)="on_click($event, component)" (mouseleave)="resetPosition($event)"
+            (mousemove)="on_mousemove($event)">
+
             <img class="logo" src="{{ component.image }}" alt="{{ component.item }}">
             <p class="topic_item">{{ component.item }}</p>
             @if ( component.item === selected_card && is_active){
@@ -17,28 +19,26 @@
                 <label class="iframe-label">Producer Website/Service</label>
                 <iframe class="iframeI" loading="lazy"
                     sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item"
-                    [src]="getSanitizedUrl(component.url[0])" frameborder="0"></iframe>
+                    [src]="component.sanitizedUrls?.[0]" frameborder="0"></iframe>
 
                 <label class="iframe-label">Consumer Website/Service</label>
                 <iframe class="iframeII" loading="lazy"
                     sandbox="allow-scripts allow-same-origin allow-popups allow-forms" title="topic.item"
-                    [src]="getSanitizedUrl(component.url[1])" frameborder="0"></iframe>
+                    [src]="component.sanitizedUrls?.[1]" frameborder="0"></iframe>
             </div>
             } @else {
             <iframe class="iframeI" loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms"
-                title="topic.item" [src]="getSanitizedUrl(component.url[0])" frameborder="0"></iframe>
+                title="topic.item" [src]="component.sanitizedUrls?.[0]" frameborder="0"></iframe>
             <iframe class="iframeII" loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms"
-                title="topic.item" [src]="getSanitizedUrl(component.url[1])" frameborder="0"></iframe>
+                title="topic.item" [src]="component.sanitizedUrls?.[1]" frameborder="0"></iframe>
             }
             @if ( component.images.length ){
             <img class="image" title="topic.item" [src]="component.images[0]" />
             }
             } @else {
             <iframe class="iframeI" loading="lazy" sandbox="allow-scripts allow-same-origin allow-popups allow-forms"
-                title="topic.item" [src]="getSanitizedUrl(component.url[0])" frameborder="0"></iframe>
+                title="topic.item" [src]="component.sanitizedUrls?.[0]" frameborder="0"></iframe>
             }
-            } @else if ( component.images.length ){
-            <img class="image" title="topic.item" [src]="component.images[0]" />
             }
             }
         </div>
